# OCSP_Checker

./: .gitignore  Chrome.pem  README.md
Chrome/: background.js  content.js  extension.html  manifest.json  package.json  webpack.config.js  websitemanager.js
Date_Getter/: CMakeLists.txt  manifest.json
Date_Getter/doc/: com.ptut.date_getter.json
Date_Getter/include/: native_messaging.h  ocsp_stapling.c  tcp_connection.c  tcp_connection.h
Date_Getter/src/addon/: background.js  content.js
Date_Getter/src/app/: main.c  ocsp_stapling.h  parser.c
Firefox/: manifest.json  package-lock.json  package.json  webpack.config.js
MAQUETTES/: MaquetteAccueilV3.pptx  MaquetteOngletsV2.pptx
Native/: app.js  chrome_install.sh  com.e2.ocsp_checker.json  firefox_install.sh  install.sh  package-lock.json  package.json
NativeC/: background.js  date_getter  manifest.json
Notifications/: index.html  manifest.json  script.js  style.css
Options chrome/: manifest.json  option.html  option.js
Prototype/: icons.pem  manifest.json
PrototypeV2/: CMakeLists.txt  manifest.json
PrototypeV2/doc/: com.ptut.date_getter.json  dependencies.txt
PrototypeV2/src/: extension.html
PrototypeV2/src/addon/: background.js  content.js  script.js  storagemanager.js  user-interface.js
PrototypeV2/src/addon/style/: popup.css
PrototypeV2/src/native_app/: main.c  native_messaging.c  ocsp_stapling.c  parser.h  tcp_connection.c
Script_Dates/: :  Makefile  client  date_check  date_check.py  date_diff.py  date_getter.py  manifest.json  session_tls.c  std_http.py  tcp_connection.c  url_sender.js
Site web/: Couleurs.txt  index.html  style.css  temp.html
Stockage sites/: extension.html  manifest.json  script.js  sites.json  style.css
UML/: Sequence:Echange_url.uxf  Sequence_Ajout_site.uxf  (+5 more)
(+105 files in other folders)
